--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-grappelli==4.0.1
 djangorestframework==3.15.2
 et_xmlfile==2.0.0
 fonttools==4.56.0
+gunicorn==23.0.0
 html5lib==1.1
 idna==3.10
 lxml==5.3.1
@@ -23,6 +24,7 @@ mysqlclient==2.2.7
 numpy==2.2.4
 openpyxl==3.1.5
 oscrypto==1.3.0
+packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 psycopg2==2.9.10
